# goldilocks-DPM

./: LICENSE  README.md  pyproject.toml
goldilocks_dpm/: goldilocks_ZscoreSustain.py  goldilocks_dpm.py
goldilocks_dpm/demos/: ADNIMERGE2023_synthetic.csv  README.md  __init__.py  goldilocks-pysustain.py  goldilocks-sustain-wip.ipynb  plot_SuStaIn_model_arbitrarycolours.py  synthetic_data.ipynb
